--- a/Plasma-Style/Snow-Lyra/metadata.desktop
+++ b/Plasma-Style/Snow-Lyra/metadata.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
-Name=Liskarm@_ryu
+Name=Snow
 X-KDE-PluginInfo-Author=_ryu
 X-KDE-PluginInfo-Email=sryuz25@gmail.com
-X-KDE-PluginInfo-Name=Liskarm@_ryu
+X-KDE-PluginInfo-Name=Snow
 X-KDE-PluginInfo-Version=
 X-KDE-PluginInfo-Website=
 X-KDE-PluginInfo-Category=
