Fix nf not showing image

--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -55,7 +55,7 @@ bar_length=15
 bar_color_elapsed="distro"
 bar_color_total="distro"
 image_backend="kitty"
-image_source="/home/re1san/.config/neofetch/assets/nya_bg.png"
+image_source="$HOME/.config/neofetch/assets/nya_bg.png"
 image_size="400px"
 image_loop="on"
 yoffset=0
